// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a video element for each element in the data array 1`] = `
<div>
  <div
    class="sc-bZQynM jgZutv"
  >
    <div
      class="sc-bdVaJa iRVUNM"
    >
      <div
        class="sc-bwzfXH bVDsAk"
      >
        <video
          class="sc-htpNat jtiZZo"
          loop=""
          autoplay=""
          src="https://enda.ie/filename-01.mp4"
        />
      </div>
    </div>
    <div
      class="sc-bdVaJa iRVUNM"
    >
      <div
        class="sc-bwzfXH bVDsAk"
      >
        <video
          class="sc-htpNat jtiZZo"
          loop=""
          autoplay=""
          src="https://enda.ie/filename-02.mp4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders no video elements when data is empty 1`] = `
<div>
  <div
    class="sc-bZQynM jgZutv"
  />
</div>
`;
